swaggerドキュメントの整備のため、policiesエンドポイントのスケルトン作成
