# docs/swagger.json
@@ -9,8 +9,8 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080/api/v0",
-    "basePath": "/",
+    "host": "localhost:8080",
+    "basePath": "/api/v0",
     "paths": {
         "/health": {
             "get": {
@@ -30,6 +30,41 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.StatusResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/policies": {
+            "get": {
+                "description": "指定された規約情報を１件返却する。規約本文は改行文字入りのテキストとなる。",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "policies"
+                ],
+                "summary": "[GEN-API-001] ユーザ規約参照",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetPoliciesResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -261,7 +296,7 @@
                     },
                     {
                         "description": "書誌情報更新リクエスト",
-                        "name": "Policies",
+                        "name": "Record",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -645,7 +680,7 @@
                 }
             }
         },
-        "dto.ContainerListItem": {
+        "dto.ContainerListItemResponse": {
             "type": "object",
             "properties": {
                 "contributers": {
@@ -681,10 +716,12 @@
             "type": "object",
             "properties": {
                 "name": {
+                    "description": "貢献者名（人物名、研究会名など）",
                     "type": "string",
                     "example": "木村元"
                 },
                 "role": {
+                    "description": "役割",
                     "type": "string",
                     "enum": [
                         "author",
@@ -793,7 +830,7 @@
             ],
             "properties": {
                 "record_id": {
-                    "description": "公開用ユーザID",
+                    "description": "公開用書誌ID",
                     "type": "string"
                 },
                 "user_id": {
@@ -818,10 +855,52 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "エラーコード（業務エラーコード）",
                     "type": "string"
                 },
                 "message": {
+                    "description": "エラーメッセージ",
                     "type": "string"
+                }
+            }
+        },
+        "dto.GetPoliciesResponse": {
+            "type": "object",
+            "required": [
+                "content",
+                "label",
+                "latest_version",
+                "policy_id",
+                "update_date"
+            ],
+            "properties": {
+                "content": {
+                    "description": "規約本文（改行文字入りテキスト）",
+                    "type": "string",
+                    "example": "第１条〜¥n第２条〜〜2026年9月30日"
+                },
+                "label": {
+                    "description": "ラベル（表示名）",
+                    "type": "string",
+                    "example": "利用規約"
+                },
+                "latest_version": {
+                    "description": "最新バージョン",
+                    "type": "string",
+                    "example": "1.2"
+                },
+                "policy_id": {
+                    "description": "規約ID",
+                    "type": "string",
+                    "enum": [
+                        "terms",
+                        "privacy_policy"
+                    ]
+                },
+                "update_date": {
+                    "description": "更新日時（yyyy-mm-dd hh:MM:ss）",
+                    "type": "string",
+                    "example": "2026-09-30 10:00:00"
                 }
             }
         },
@@ -929,7 +1008,9 @@
             ],
             "properties": {
                 "count": {
-                    "type": "integer"
+                    "description": "件数",
+                    "type": "integer",
+                    "example": 1
                 },
                 "records": {
                     "type": "array",
@@ -978,7 +1059,7 @@
                 },
                 "original_title": {
                     "type": "string",
-                    "example": "History of School of Boundary"
+                    "example": "School History of Boundary"
                 }
             }
         },
@@ -994,7 +1075,7 @@
                     "description": "収録物情報",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/dto.ContainerListItem"
+                            "$ref": "#/definitions/dto.ContainerListItemResponse"
                         }
                     ]
                 },
@@ -1060,6 +1141,7 @@
             "type": "object",
             "properties": {
                 "status": {
+                    "description": "ステータス（OK, Createdなど）",
                     "type": "string"
                 }
             }
@@ -1216,7 +1298,10 @@
                 "status": {
                     "description": "同意ステータス",
                     "type": "string",
-                    "example": "update_required"
+                    "enum": [
+                        "agreed",
+                        "update_required"
+                    ]
                 }
             }
         },
